<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/fixed_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="24sp"/>

        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="16dp">

        </androidx.viewpager2.widget.ViewPager2>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/random_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/viewpager2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:textSize="24sp"/>

        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2_delay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/fixed_sub_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/random_sub_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/reload_random"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_refresh_black_24dp"
                android:id="@+id/reload_random"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/textView5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

